// $Id: CHANGELOG.txt,v 1.207 2007/06/08 05:50:53 dries Exp $

Drupal 6.0, xxxx-xx-xx (development version)
----------------------
- New watchdog as a hook functionality.
   * New hook_watchdog that can be implemented by any module to route log messages to various destinations.
   * Expands the severity levels from 3 (Error, Warning, Notice) to the 8 levels defined in RFC 3164.
   * The watchdog module is now called dblog, and is optional, but enabled by default in the default install profile.
   * Extended the database log module so log messages can be filtered.
   * Added syslog module: useful for monitoring large Drupal installations.
- Added optional e-mail notifications when users are approved, blocked, or deleted.
- Added versioning support to node terms.
- Made it easier to theme the forum overview page.
- Made Drupal work correctly when running behind a reverse proxy like Squid or Pound.
- Drupal works with error reporting set to E_ALL.
- Added scripts/drupal.sh to execute Drupal code from the command line. Useful to use Drupal as a framework to build command-line tools.
- Made signature support optional and made it possible to theme signatures.
- Made it possible to filter the URL aliases on the URL alias administration screen.
- Language system improvements:
    * Support for right to left languages.
    * Language detection based on parts of the URL.
    * Browser based language detection.
    * Made it possible to specify a node's language.
    * Language dependent path aliases.
    * Automatically import translations when enabling new modules.
    * Automatically import translations when adding a new language.
- Moved "PHP input filter" to a stand-alone module so it can be deleted for security reasons.
- Usability:
    * Improved handling of teasers in posts.
    * Added sticky table headers.
    * Check for clean URL support automatically with JavaScript.